// This file determines the communication between the gRPC server.
// Copyright (C) 2024-2025 jsusmachaca
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package event_trigger;

option go_package = "github.com/tiksup/tiksup-kafka-worker/internal/proto";

service EventTriggerService { 
    rpc TriggerEvent (EventRequest) returns (EventResponse);
}

message EventRequest {
    string event_name = 1;
    string user_id = 2;
}

message EventResponse {
    bool received = 1;
}
